# cortex-viz

./: .craftsmanship.conf  .gitignore  CHANGELOG.md  PRIVACY.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
cortex_viz/: __main__.py  tool_error_handler.py
cortex_viz/core/: activity_graph.py  activity_paths.py  community_detection.py  display_label.py  graph_builder.py  graph_builder_dedup.py  graph_builder_discussions.py  graph_builder_edges.py  graph_builder_nodes.py  graph_builder_nodes_leaves.py  graph_quality_scorer.py  impact_graph.py  layout_engine.py  lod_aggregator.py  session_trace.py  temporal.py  tile_renderer.py  wiki_coverage.py  wiki_coverage_dashboard.py  wiki_coverage_scope_type.py  wiki_coverage_scopes.py  wiki_coverage_scopes_part1.py  wiki_coverage_scopes_part2.py  wiki_coverage_scopes_part3.py  wiki_coverage_score.py  wiki_page_actions.py  wiki_source_resolve.py  workflow_graph_association.py  workflow_graph_builder.py  workflow_graph_builder_ingest.py  workflow_graph_builder_relational.py  workflow_graph_entity.py  workflow_graph_inputs.py  workflow_graph_palette.py  workflow_graph_schema.py  workflow_graph_schema_enums.py  workflow_graph_supersede.py  workflow_graph_wiki.py
cortex_viz/errors/: __init__.py
cortex_viz/handlers/: _tool_meta.py  get_methodology_graph.py  graph_stream.py  open_visualization.py  quadtree_handler.py  recompute_layout.py  tile_handler.py  workflow_graph.py  workflow_graph_serialize.py  workflow_graph_streaming.py  workflow_graph_streaming_wiki.py
cortex_viz/hooks/: activity_capture.py  hooks.json
cortex_viz/infrastructure/: activity_store.py  ap_bridge.py  ap_graph_root.py  config.py  conversation_reader.py  db_probe.py  file_io.py  layout_pg_store.py  lod_pg_store.py  mcp_call_timeout.py  mcp_client.py  mcp_client_stderr.py  memory_associations.py  memory_browse.py  memory_config.py  memory_read.py  memory_supersede.py  prd_bridge.py  profile_store.py  scanner.py  scanner_parse.py  schema_migrate.py  schema_preflight.py  snapshot_pg_store.py  trace_source.py  wiki_graph.py  wiki_page_actions_pg.py  wiki_pg.py  wiki_read.py  workflow_graph_source.py  workflow_graph_source_ast.py  workflow_graph_source_ast_async.py  workflow_graph_source_ast_edges.py  workflow_graph_source_jsonl.py  workflow_graph_source_native_ast.py  workflow_graph_source_pg.py
cortex_viz/server/: activity_stream.py  bench_layout_authority.py  build_process.py  git_diff_engine.py  graph_appliers.py  graph_build.py  graph_build_helpers.py  graph_build_l6.py  graph_build_merge.py  graph_build_run.py  graph_build_wiki_source.py  graph_cache_state.py  graph_communities.py  graph_discussions.py  graph_event_stream.py  graph_response.py  graph_wire.py  http_common.py  http_dashboard_data.py  http_file_diff.py  http_launcher.py  http_security.py  http_server.py  http_standalone.py  http_standalone_activity.py  http_standalone_endpoints.py  http_standalone_endpoints_sankey.py  http_standalone_fullstream.py  http_standalone_graph.py  http_standalone_memories.py  http_standalone_nodb.py  http_standalone_response.py  http_standalone_routes.py  http_standalone_skills.py  http_standalone_sse.py  http_standalone_state.py  http_standalone_static.py  http_standalone_trace.py  http_standalone_wiki.py  layout_authority.py  (+11 more)
cortex_viz/shared/: domain_mapping.py  entity_canonical.py  hash.py  instance_scope.py  json_stream_split.py  project_ids.py  text.py  yaml_parser.py
scripts/: audit_brain_alignment.mjs  bench_brain_edges.mjs  launcher.py
skills/cortex-visualize/: SKILL.md
tasks/: bridge-mcp-plan.md  galaxy-lag-and-ap-aggregation-audit.md  todo.md
tasks/bench-manifests/: v2.6.2.md
tests/: test_activity_graph_paths.py  test_activity_paths.py  test_activity_store_suffix_lookup.py  test_ap_graph_root.py  test_community_detection.py  test_display_label.py  test_file_diff.py  test_git_diff_engine.py  test_graph_build_wiki_source.py  test_graph_builder.py  test_graph_builder_discussions.py  test_http_standalone_wiki_actions.py  test_impact_graph.py  test_instance_scope.py  test_json_stream_split.py  test_layout_authority.py  test_lod_aggregator.py  test_mcp_app.py  test_memory_associations.py  test_memory_read.py  test_memory_supersede.py  test_no_db_mode.py  test_open_visualization_schema_preflight.py  test_schema_migrate.py  test_schema_preflight.py  test_session_trace.py  test_snapshot_fullstream.py  test_snapshot_pg_store_scope.py  test_trigram_conformance.py  test_wiki_coverage.py  test_wiki_page_actions.py  test_wiki_read.py  test_wiki_source_resolve.py  test_windows_launch_path.py  test_workflow_graph_association.py  test_workflow_graph_entity_wiring.py  test_workflow_graph_supersede.py  test_workflow_graph_wiki.py
tests/fixtures/: pg_trgm_reference.json
tests/js/: run_trigram_conformance.mjs
ui/: atom-viz.html  brain-viz.html  methodology-viz.html  unified-viz.html
ui/brain/js/: anatomy.js  atlas_mni.js  boot.js  brain_mesh.js  communities.js  data.js  detail_bridge.js  edges.js  force_layout.js  impact.js  interact.js  layout.js  palette.js  points.js  regions.js  scaffold.js  scene.js  search.js  search_worker.js  trigram.js  vitals.js  vitals_spec.js
ui/brain/models/: ATTRIBUTION.md
ui/dashboard/: DESIGN.md  panels.css  theme.css
ui/dashboard/js/: analytics.js  atom.js  camera.js  categories.js  config.js  controls.js  edge_fx.js  edges.js  effects.js  graph.js  helix.js  interaction.js  nodes.js  polling.js  raycast.js  scene.js  state.js  stats.js  timeline.js
ui/methodology/css/: components.css  theme.css
ui/methodology/js/: config.js  data.js  detail.js  filters.js  graph.js  labels.js  main.js  nodes.js  state.js  stats.js  tooltip.js
ui/shared/: README.md  ds.css  palette.js  surface-toggle.js
ui/shared/tokens/: colors.css  elevation.css  fonts.css  spacing.css  surfaces.css  typography.css
ui/unified/: detail.css  knowledge.css  memory_science.css  panels.css  sankey.css  theme.css  timeline.css  workflow_graph.css
ui/unified/js/: activity_stream.js  capabilities.js  config.js  (+36 more)
(+47 files in other folders)
