[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortex-viz"
version = "1.0.0"
description = "Visualization and graph MCP server for Cortex — neural graph, methodology map, workflow graph, and trace UI extracted from the Cortex memory engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Clement Deust", email = "admin@ai-architect.tools" },
]
keywords = ["mcp", "claude-code", "visualization", "graph", "cortex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/cdeust/cortex-viz"
Repository = "https://github.com/cdeust/cortex-viz"

[project.scripts]
cortex-viz = "cortex_viz.__main__:main"

[project.optional-dependencies]
# CPU-only graph viz path — moved verbatim from neuro-cortex-memory.
# Precomputed igraph layout + Datashader tile rendering + Apache Arrow
# streaming for client-side hit-test. Enables /api/tile + /api/quadtree +
# /api/recompute_layout. No GPU dependency. ~200 MB (numba + llvmlite).
viz-tile = [
    "igraph>=0.11",
    "datashader>=0.16.3",
    "pyarrow>=15.0",
    "pandas>=2.2",
    "cachetools>=5.0",
    "Pillow>=10.0",
]
# The viz read contract: cortex-viz reads Cortex's PG store + ~/.claude
# artifacts directly. These are the read-path drivers (no write path).
data = [
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "pgvector>=0.3",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["cortex_viz"]

[tool.hatch.build.targets.wheel.force-include]
"ui" = "cortex_viz/ui"

[tool.ruff]
extend-exclude = [".claude"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
timeout = 300
timeout_method = "thread"

[tool.coverage.run]
source = ["cortex_viz"]

[tool.coverage.report]
show_missing = true
