[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortex-viz"
version = "2.6.0"
description = "Visualization and graph MCP server for Cortex — neural graph, methodology map, workflow graph, and trace UI extracted from the Cortex memory engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Clement Deust", email = "admin@ai-architect.tools" },
]
keywords = ["mcp", "claude-code", "visualization", "graph", "cortex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "numpy>=1.24.0",
    # PostgreSQL read-path drivers. NOT optional: the standalone HTTP
    # server's only store is MemoryReader, which imports psycopg at module
    # top (no SQLite fallback), and main() calls _get_store() BEFORE it
    # binds the socket. Without these the server crashes at startup — before
    # it can serve even the UI skeleton — which presents to the user as "the
    # visualization won't open / isn't running". They were previously under
    # the optional [data] extra, so any install that didn't request the extra
    # produced a server that could never start. source: reproduced 2026-07-02
    # (ModuleNotFoundError: No module named 'psycopg' at memory_read.py:41,
    # raised from _get_store() in http_standalone.py:main before _bind_server).
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "pgvector>=0.3",
]

[project.urls]
Homepage = "https://github.com/cdeust/cortex-viz"
Repository = "https://github.com/cdeust/cortex-viz"

[project.scripts]
cortex-viz = "cortex_viz.__main__:main"

[project.optional-dependencies]
# CPU-only graph viz path — moved verbatim from neuro-cortex-memory.
# Precomputed igraph layout + Datashader tile rendering + Apache Arrow
# streaming for client-side hit-test. Enables /api/tile + /api/quadtree +
# /api/recompute_layout. No GPU dependency. ~200 MB (numba + llvmlite).
viz-tile = [
    "igraph>=0.11",
    "datashader>=0.16.3",
    "pyarrow>=15.0",
    "pandas>=2.2",
    "cachetools>=5.0",
    "Pillow>=10.0",
]
# The viz read contract: cortex-viz reads Cortex's PG store + ~/.claude
# artifacts directly. These read-path drivers were PROMOTED to core
# ``dependencies`` (see the note there) because the server cannot start
# without them. This extra is kept as a back-compat alias so existing
# ``cortex-viz[data]`` install commands / lockfiles still resolve.
data = [
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "pgvector>=0.3",
]
# Associative community detection for the brain view. Leiden with the
# CPM (Constant Potts Model) objective — resolution-limit-free, so it
# does not silently merge small topical communities the way modularity
# does past sqrt(2m) edges (Fortunato & Barthelemy, PNAS 2007). Kept a
# separate extra (NOT folded into viz-tile's ~200 MB datashader stack)
# because it is a small, independent capability; the brain view
# degrades to per-kind colouring when it is absent.
#   source: Traag, V.A., Waltman, L. & van Eck, N.J. (2019), "From
#   Louvain to Leiden: guaranteeing well-connected communities",
#   Scientific Reports 9:5233 (Leiden algorithm).
#   source: Traag, V.A., Van Dooren, P. & Nesterov, Y. (2011), "Narrow
#   scope for resolution-limit-free community detection", Phys. Rev. E
#   84:016114 (CPM objective).
community = [
    "igraph>=0.11",
    "leidenalg>=0.10",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["cortex_viz"]

[tool.hatch.build.targets.wheel.force-include]
"ui" = "cortex_viz/ui"

[tool.ruff]
extend-exclude = [".claude"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
timeout = 300
timeout_method = "thread"

[tool.coverage.run]
source = ["cortex_viz"]

[tool.coverage.report]
show_missing = true
